Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53237

Executing QSqlQuery:: exec(), next() after QSqlQuery:: prepare() cause error "QMYSQL3: Unable to fetch data" if return type is TINYINT(3) UNSIGNED

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.6.2
    • 5.6.0, 5.7.0 Beta
    • Core: Plugins
    • None
    • Ubuntu x64
    • 10d977993445f2794f1dd8c88b2e83517ef524f3

    Description

      I'm using MySQL plugin and it works fine on Qt5.5.1
      With upgrading to Qt5.6.0 and Qt5.7.0b I have found problem in QSqlQuery::prepare.
      Usage of exec() works fine without QSqlQuery::prepare only.
      Once I try to set values using addBindValue, calling next() cause error:
      "QMYSQL3: Unable to fetch data"
      Please fix it and tell how to temporary patch this bug.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jefernan Jesus Fernandez
            ighor IGHOR
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes