Solved issue: QMYSQL3: Unable to fetch data, It appears in a SELECT operation that contains a JSON field, reference: https://bugreports.qt.io/browse/QTBUG-53237, https://forum.qt.io/topic/101027/is-qsqlquery-not-support-json-type-in-mysql